# controllers/postsCategories.js
@@ -1,0 +1,97 @@
+const express = require('express');
+const Posts = require('../models/postsCategories');
+
+const router = express.Router();
+
+//save posts
+
+router.post('/postCategory/save',(req,res)=>{
+    let newPost = new Posts(req.body);
+
+    newPost.save((err)=>{
+        if(err){
+            return res.status(400).json({
+                error:err
+            });
+        }
+        return res.status(200).json({
+            success:"post save successfully"
+        });
+    });
+});
+
+//get posts
+
+router.get('/postsCategory',(req,res)=>{
+    Posts.find().exec((err,posts)=>{
+        if(err){
+            return res.status(400).json({
+                error:err
+            });
+        }
+        return res.status(200).json({
+            success:true,
+            existingPosts:posts
+        });
+    });
+});
+
+//get a specific post
+
+router.get("/postCategory/:id",(req,res) =>{
+    let postId = req.params.id;
+
+    Posts.findById(postId,(err,post)=>{
+        if(err){
+            return res.status(400).json({success:false,err});
+        }
+        return res.status(200).json({
+            success:true,
+            post
+        });
+    });
+});
+
+//update posts
+
+router.put('/postCategory/update/:id',(req,res) => {
+
+    Posts.findByIdAndUpdate(
+        req.params.id,
+        {
+            $set:req.body
+        },
+        (err,post) => {
+
+            if(err){
+                return res.status(400).json({
+                    error:err
+                });
+
+            }
+
+            return res.status(200).json({
+                success: "Update Succesfully"
+            });
+        }
+    );
+});
+
+//delete post
+
+router.delete('/postCategory/delete/:id',(req,res)=>{
+    Posts.findByIdAndRemove(req.params.id).exec((err,deletedPost)=>{
+
+        if(err)return res.status(400).json({
+            message:"Delete unsuccessful",err
+        });
+        return res.json({
+            message:"delete is successful",deletedPost
+        });
+    });
+
+});
+
+
+
+module.exports = router;
